--- a/.env.EXAMPLE
+++ b/.env.EXAMPLE
@@ -1,6 +1,3 @@
-const db = require('db')
-db.connect({
-  host=process.env.DB_HOST,
-  username=process.env.DB_USER,
-  password=process.env.DB_PASSWORD
-})
+DB_NAME=ecommerce_db
+DB_USER=root
+DB_PASSWORD=root
