--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
+    "console-table": "^0.1.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql": "github:mysqljs/mysql",
